--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "font-picker-react": "^3.0.1",
     "node-sass": "^4.12.0",
+    "rc-color-picker": "^1.2.6",
     "react": "^16.8.6",
     "react-color": "^2.17.3",
     "react-dom": "^16.8.6",
